vercel json file updated

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,13 @@
 {
   "version": 2,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "backend/app/main.py"
+      "source": "/api/(.*)",
+      "destination": "backend/app/main.py"
     },
     {
-      "src": "/reports/(.*)",
-      "dest": "/reports/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/build/$1"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "env": {
