--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "frontend/src/components/App.js"
     }
   ],
   "env": {
